--- a/package.json
+++ b/package.json
@@ -5,20 +5,31 @@
   "main": "index.js",
   "dependencies": {
     "async": "^1.5.1",
+    "chai": "^3.5.0",
     "cheerio": "^0.19.0",
-    "express": "^4.13.3",
+    "express": "^4.14.0",
     "fs": "0.0.2",
     "http": "0.0.0",
+    "mocha": "^3.2.0",
     "moment": "^2.11.0",
     "moment-timezone": "^0.4.1",
-    "request": "^2.67.0"
+    "request": "^2.79.0"
   },
   "devDependencies": {
+    "mocha-junit-reporter": "^1.12.1",
     "mongoose": "^4.3.4"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+	"test": "./node_modules/.bin/mocha --reporter spec"
   },
   "author": "Grégory COLIN",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/aizentaichu/yeorest.git"
+  },
+  "bugs": {
+    "url": "https://github.com/aizentaichu/yeorest/issues"
+  },
+  "homepage": "https://github.com/aizentaichu/yeorest#readme"
 }
