--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "async": "^1.5.1",
     "chai": "^3.5.0",
     "cheerio": "^0.19.0",
+    "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
+    "express-session": "^1.14.2",
     "fs": "0.0.2",
     "http": "0.0.0",
     "mocha": "^3.2.0",
@@ -20,7 +22,7 @@
     "mongoose": "^4.3.4"
   },
   "scripts": {
-	"test": "./node_modules/.bin/mocha --reporter spec"
+    "test": "./node_modules/.bin/mocha --reporter spec"
   },
   "author": "Grégory COLIN",
   "license": "ISC",
